--- a/SOS_App/pubspec.yaml
+++ b/SOS_App/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_polyline_points: ^1.0.0
   firebase_core: ^2.13.1
   firebase_auth: ^4.6.2
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
